# Synapse

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh  renovate.json
.github/workflows/: tag-release.yml  verify.yml  version-bump.yml
.sqlx/: query-21bebcc07ba2ad9f56f5683313a6cc1469a14e3693ab62260245f2fa125cf050.json  query-27b0340e453a203868408dd711a11c1407ef488b27ff31ce1a32ecd62b01d8a0.json  query-32dcfd50fb244b630924142163bbf355610d46d2241fe5a960b2f4b978300ec4.json  query-3da1ddff6056984d096c17c370dee6b7058a30fbaf2a484d796604eaaf4a8afe.json  query-3dd055f12cea25a39ffbb4253543e1d994d2ae59e7d6ea7e7a5dbb10ccf15ea8.json  query-416f499e2fad66e078e56f62a3ee1f4f78cfc02ec36ca59c24bdd2f0b451f072.json  query-5a0f4240300f92af57b8cfb90d12cbb3aa53ddf3526ff4cd13f59f657377f0e6.json  query-7f7f00f876daba00164838322d199fb2a08d4b13695c9a254884e7a497882474.json  query-83f32260e8df72c08b7bc56d01e3fae6e4b8ab839fbbe5dc6b5bb711271a83d6.json  query-8e86a85eee3c144b4de0742c3468142503c444d93a0e3e865bb8c35280b8d724.json  query-de01452d441bc4fb879e2e13eec0b3ef0572c486da7490c15faf241481df3932.json  query-deb3f177415cd852456df5246fa202e7adf684eab38b79740754a2601ca18804.json
configs/: synapse.example.yaml
crates/synapse-broker/: Cargo.toml
crates/synapse-broker/src/: cache.rs  config.rs  connection.rs  db.rs  main.rs  msg_loop.rs  router.rs  tls.rs  webui.rs  webui_handlers.rs
crates/synapse-cli/: Cargo.toml
crates/synapse-cli/src/: client.rs  main.rs
crates/synapse-proto/: Cargo.toml
crates/synapse-proto/src/: auth.rs  codec.rs  compression.rs  error.rs  frame.rs  lib.rs  message.rs
deployments/: docker-compose.yml
docs/plans/: 2026-03-01-fleet-webui-design.md  2026-03-01-fleet-webui.md  2026-03-02-synapse-mcp-design.md  2026-03-02-synapse-mcp.md
mcp/: .mcp.json  README.md  install.ps1  install.sh  package-lock.json  package.json  plugin.json  tsconfig.json
mcp/.claude-plugin/: plugin.json
mcp/src/: cli.ts  index.ts
mcp/src/tools/: listen.ts  send.ts  stubs.ts
migrations/: 001_initial.sql  002_fleet.sql  003_schema_hardening.sql
scripts/: bootstrap-fleet.sh
webui/: index.html  login.html
