[workspace]
members = [
    "crates/synapse-proto",
    "crates/synapse-broker",
    "crates/synapse-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.2"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
rustls       = "0.23"
tokio-rustls = "0.26"
sqlx         = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "migrate", "uuid"] }
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1",   features = ["v4"] }
redis        = { version = "0.27", features = ["tokio-comp"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rmpv         = "1"
zstd         = "0.13"
hmac         = "0.12"
sha2         = "0.10"
rand         = "0.8"
axum         = { version = "0.7", features = ["ws"] }
clap         = { version = "4", features = ["derive", "env"] }
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = "0.3"
config       = "0.14"
rustls-pemfile    = "2"
tokio-tungstenite = "0.24"
