[package]
name    = "synapse-broker"
version.workspace = true
edition = "2021"

[[bin]]
name = "synapse-broker"
path = "src/main.rs"

[dependencies]
synapse-proto      = { path = "../synapse-proto" }
tokio              = { workspace = true }
rustls             = { workspace = true }
tokio-rustls       = { workspace = true }
sqlx               = { workspace = true }
redis              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
rand               = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
config             = { workspace = true }
rustls-pemfile     = { workspace = true }
tokio-tungstenite  = { workspace = true }
