[package]
name    = "synapse-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
synapse-proto      = { path = "../synapse-proto" }
tokio              = { workspace = true }
rustls             = { workspace = true }
tokio-rustls       = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rustls-pemfile     = "2"
rand               = { workspace = true }
