[package]
name    = "synapse-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
zstd      = { workspace = true }
rmpv      = { workspace = true }
hmac      = { workspace = true }
sha2      = { workspace = true }
rand      = { workspace = true }
thiserror = { workspace = true }
bytes     = "1"

[dev-dependencies]
tokio = { workspace = true }
