[package]
name    = "synapse-proto"
version.workspace = true
edition = "2021"

[dependencies]
tokio     = { workspace = true }
zstd      = { workspace = true }
rmpv      = { workspace = true }
hmac      = { workspace = true }
sha2      = { workspace = true }
rand      = { workspace = true }
thiserror = { workspace = true }
bytes     = "1"
